add port to .env

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI=mongodb+srv://mongo:hHsB7hGTtwTcfiBw@cluster0.7pdfe.mongodb.net/imgs?retryWrites=true&w=majority
 MONGODB_DB=imgs
 CDN_URL=https://cdn.imgs.bar/imgs-beta/
+PORT=8081
